package com.lavadero.lavadero_api.model.enums;

public enum EstadoOrden {
    REGISTRADA,
    EN_PROCESO,
    FINALIZADA,
    ENTREGADA,
    CANCELADA
}
