package com.lavadero.lavadero_api.model.enums;

public enum TipoVehiculo {
    SEDAN,
    SUV,
    CAMIONETA,
    MOTO,
    CAMION
}
